add resend-otp endpoint
